--- a/DOM/HTML/鼠标事件深入、点击与拖拽分离、双击事件.html
+++ b/DOM/HTML/鼠标事件深入、点击与拖拽分离、双击事件.html
@@ -20,54 +20,112 @@
       height: 100px;
       background-color: green;
     }
+
+    div {
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100px;
+      height: 100px;
+      background-color: orange;
+      z-index: 1;
+    }
   </style>
 </head>
 
 <body>
+  <div></div>
   <!-- 协议限定符，防止href生效，跳转和刷新 -->
   <a href="javascript:;"></a>
   <!-- 模块函数 -->
   <script>
-    Element.prototype.dragNclick = (function (elemClick) {
-      var bTime = 0, eTime = 0, oPos = [];
+    Element.prototype.dragNclick = (function (elemClick, menu) {
       var _this = this;
-      drag.call(this);
+      var bTime = 0, eTime = 0, oPos = [],
+        wWidth = getViewPortSize().width,
+        wHeight = getViewPortSize().height,
+        eleWidth = getStyles(_this, "width"),
+        eleHeigth = getStyles(_this, "height"),
+        mWidth = getStyles(menu, 'width'),
+        mheight = getStyles(menu, 'height');
+
       function drag() {
         var x, y;
         addEvent(_this, 'mousedown', function (e) {
-          var e = e || window.event;
-          // 按下时间
-          bTime = new Date().getTime();
-          // 记录初始位置
-          oPos = [parseInt(getStyles(_this, 'left')), parseInt(getStyles(_this, 'top'))];
-          x = pagePos(e).X - parseInt(getStyles(_this, 'left'));
-          y = pagePos(e).Y - parseInt(getStyles(_this, 'top'));
-          addEvent(document, 'mousemove', mouseMove);
-          addEvent(document, 'mouseup', mouseUp);
-          cancelBubble(e);
+          var e = e || window.event,
+            btnCode = e.button;
+          // 右键
+          if (btnCode === 2) {
+            var mLeft = pagePos(e).X + 'px'
+            var mTop = pagePos(e).Y + 'px'
+            if (mLeft <= 0) {
+              mLeft = 0;
+            } else if (mLeft >= wWidth - mWidth)
+              menu.style.dispaly = 'block'
+          } else if (btnCode === 0) {
+            // 按下时间
+            bTime = new Date().getTime();
+            // 记录初始位置
+            oPos = [parseInt(getStyles(_this, 'left')), parseInt(getStyles(_this, 'top'))];
+            menu.style.dispaly = "none";
+            x = pagePos(e).X - parseInt(getStyles(_this, 'left'));
+            y = pagePos(e).Y - parseInt(getStyles(_this, 'top'));
+            addEvent(document, 'mousemove', mouseMove);
+            addEvent(document, 'mouseup', mouseUp);
+            cancelBubble(e);
+            preventDefaultEvent(e);
+          }
+        });
+
+        addEvent(document, "contextmenu", function (e) {
           preventDefaultEvent(e);
+        });
 
-          function mouseMove(e) {
-            var e = e || window.event;
-            var page = pagePos(e);
-            _this.style.left = page.X - x + 'px';
-            _this.style.top = page.Y - y + 'px';
-          }
+        addEvent(document, "click", function (e) {
+          menu.style.dispaly = "none";
+        });
 
-          function mouseUp(e) {
-            var e = e || window.event;
-            eTime = new Date().getTime();
-            // 判断点击
-            if (eTime - bTime < 100) {
-              // 跳转后归位
-              _this.style.left = oPos[0] + 'px';
-              _this.style.top = oPos[1] + 'px';
-              elemClick();
-            }
-            removeEvent(document, 'mousemove', mouseMove);
-            removeEvent(document, 'mouseup', mouseUp);
+        addEvent(menu, "click", function (e) {
+          cancelBubble(e);
+        });
+
+        function mouseMove(e) {
+          var e = e || window.event;
+          var page = pagePos(e),
+            eleLeft = pagePos(e).X - x,
+            eleTop = pagePos(e).Y - y;
+
+          // 控制边界
+          if (eleLeft <= 0) {
+            eleLeft = 0;
+          } else if (eleLeft >= wWidth - eleWidth) {
+            eleLeft = wWidth - eleWidth - 1;
           }
-        })
+          if (eleTop <= 0) {
+            eleTop = 0;
+          } else if (eleTop >= wHeight - eleHeigth) {
+            // -1 防止滚动条的出现
+            eleTop = wHeight - eleHeigth - 1;
+          }
+          _this.style.left = eleLeft + 'px';
+          _this.style.top = eleTop + 'px';
+        }
+
+        function mouseUp(e) {
+          var e = e || window.event;
+          eTime = new Date().getTime();
+          // 判断点击
+          if (eTime - bTime < 100) {
+            // 跳转后归位
+            _this.style.left = oPos[0] + 'px';
+            _this.style.top = oPos[1] + 'px';
+            elemClick();
+          }
+          removeEvent(document, 'mousemove', mouseMove);
+          removeEvent(document, 'mouseup', mouseUp);
+        }
+
       }
     });
 
@@ -75,9 +133,12 @@
   <!-- 传入 -->
   <script>
     var oLink = document.getElementsByTagName('a')[0];
+    var oMenu = document.getElementsByTagName('div')[0];
     oLink.dragNclick(function () {
-      window.open('http://www.baidu.com')
-    }); 
+      // window.open('http://www.baidu.com')
+    }, oMenu);
+
+
   </script>
 
 </body>
