--- a/DOM/放大镜效果/index.html
+++ b/DOM/放大镜效果/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="index.css">
   <script src="../utils.js"></script>
   <script src="./index.js"></script>
 </head>
+
 <body>
-  
+  <div class="img-wrap">
+    <div class="mag-wrap">
+      <img src="../image/1.jpg" alt="" class="mag-img" />
+    </div>
+    <a href="javascript:;" class="img-lk">
+      <img src="../image/1.jpg" alt="" class="static-img">
+    </a>
+  </div>
 </body>
+
 </html>
