--- a/内置方法/Array.prototype.sort.html
+++ b/内置方法/Array.prototype.sort.html
@@ -46,19 +46,49 @@
     // }));
 
 
+    // var arr = ['zhangsan', 'lisi', 'wangwu'];
+
+    // console.log(arr.sort(function (a, b) {
+    //   var _a = a.toLocaleLowerCase(),
+    //     _b = b.toLocaleLowerCase();
+    //   if (_a < _b) {
+    //     return -1;
+    //   }
+    //   if (_a > _b) {
+    //     return 1;
+    //   }
+    //   return 0;
+    // }));
+
     var arr = ['zhangsan', 'lisi', 'wangwu'];
 
-    console.log(arr.sort(function (a, b) {
-      var _a = a.toLocaleLowerCase(),
-        _b = b.toLocaleLowerCase();
-      if (_a < _b) {
-        return -1;
+    var newArr = arr.map(function (item, index) {
+      var it = {
+        index,
+        value: item.toLocaleLowerCase()
       }
-      if (_a > _b) {
+      return it;
+    })
+
+    newArr.sort(function (a, b) {
+      if (a.value > b.value) {
         return 1;
       }
-      return 0;
-    }));
+
+      if (a.value < b.value) {
+        return -1;
+      }
+      return 0
+    });
+
+    console.log(newArr);
+
+    var res = newArr.map(function (item) {
+      return arr[item.index];
+    });
+
+    console.log(res);
+
   </script>
 </body>
 
