--- a/JS专项/观察者和发布订阅/index.html
+++ b/JS专项/观察者和发布订阅/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-
+  <ul id="list"></ul>
+  <script src="./Observer.js"></script>
+  <!-- <script src="./PubAndSub.js"></script> -->
+  <script src="./index.js"></script>
 </body>
 
 </html>
