--- a/ES6/Promises A+规范/index.html
+++ b/ES6/Promises A+规范/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<script src="MyPromise.js"></script>
+<script src="MyPromise2.js"></script>
 <script src="index.js"></script>
 </body>
 
