--- a/专项练习/this优先级.html
+++ b/专项练习/this优先级.html
@@ -147,13 +147,13 @@
 
 
 
-    var a = 1;
-    function doem(a) {
-      a = 5;
-      console.log(a)
-    }
-    doem(a)
-    console.log(a);
+    // var a = 1;
+    // function doem(a) {
+    //   a = 5;
+    //   console.log(a);
+    // }
+    // doem(a);
+    // console.log(a);
 
   </script>
 </body>
