--- a/Object/index.html
+++ b/Object/index.html
@@ -8,7 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-<script src="./index.js"></script>
-<script src="./2.js"></script>
+<!--<script src="./index.js"></script>-->
+<!--<script src="./2.js"></script>-->
+<script src="./3.js"></script>
 </body>
 </html>
